Not as much point with this anymore now that jdk9+ is much more prevalent